--- a/dom/style.css
+++ b/dom/style.css
@@ -15,16 +15,18 @@ body{
 #box{
     height: 200px;
     width: 200px;
-    background-color: greenyellow;
-    font-size: 10px;
-    border: 10px solid blue;
+    border: 6px solid greenyellow;
     background-color: transparent;
     border-radius: 50%;
+    margin-top: 20px;
 }
 .btn{
-    margin-top: 30px;
-    background-color: black;
+    background-color:black;
     width: 136px;
-    height: 30px;
-    text-emphasis-color: blue;
+    height: 40px;
+    margin-top: 20px;
+    border:6px solid greenyellow;
+    text-decoration-color: chartreuse;
+
+
 }
