--- a/dom/style.css
+++ b/dom/style.css
@@ -9,7 +9,7 @@ html,body{
     height: 100%;
 }
 body{
-    background-color: #111;
+    background-color:blueviolet;
 }
 
 #box{
@@ -19,6 +19,8 @@ body{
     background-color: transparent;
     border-radius: 50%;
     margin-top: 20px;
+    text-align: center;
+    justify-content: center;
 }
 .btn{
     background-color:black;
@@ -27,6 +29,23 @@ body{
     margin-top: 20px;
     border:6px solid greenyellow;
     text-decoration-color: chartreuse;
+}
 
-
+#box2{
+    height: 200px;
+    width: 200px;
+    border: 6px solid greenyellow;
+    background-color: transparent;
+    border-radius: 50%;
+    margin-top: 20px;
+    text-align: center;
+    justify-content: center;
+}
+.btn2{
+    background-color:black;
+    width: 136px;
+    height: 40px;
+    margin-top: 20px;
+    border:6px solid greenyellow;
+    text-decoration-color: chartreuse;
 }
