--- a/dom/style.css
+++ b/dom/style.css
@@ -9,7 +9,7 @@ html,body{
     height: 100%;
 }
 body{
-    background-color:blueviolet;
+    background-color:rgb(104, 11, 190);
 }
 
 #box{
@@ -17,8 +17,8 @@ body{
     width: 200px;
     border: 6px solid greenyellow;
     background-color: transparent;
-    border-radius: 50%;
     margin-top: 20px;
+    display: flex;
     text-align: center;
     justify-content: center;
 }
@@ -36,7 +36,6 @@ body{
     width: 200px;
     border: 6px solid greenyellow;
     background-color: transparent;
-    border-radius: 50%;
     margin-top: 20px;
     text-align: center;
     justify-content: center;
